# fips-crypto

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  publish.yml
benchmarks/: ml-dsa.bench.ts  ml-kem.bench.ts  slh-dsa.bench.ts
docs/: SECURITY-MODEL.md
examples/: commonjs-usage.cjs  digital-signatures.mjs  hash-based-signatures.mjs  key-encapsulation.mjs  quantum-safe-wallet.mjs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/ml_dsa/: keygen.rs  mod.rs  params.rs  polynomial.rs  sampling.rs  sign.rs  verify.rs
rust/src/ml_kem/: decapsulate.rs  encapsulate.rs  keygen.rs  mod.rs  params.rs
rust/src/primitives/: merkle.rs  mod.rs  ntt.rs  polynomial.rs  random.rs  sha3.rs
rust/src/slh_dsa/: address.rs  fors.rs  hash.rs  hypertree.rs  keygen.rs  mod.rs  params.rs  sign.rs  verify.rs  wots.rs  xmss.rs
scripts/: generate-checksums.cjs  patch-wasm.cjs  prepare-dist.cjs  smoke-pack.cjs  verify-integrity.cjs
src/: auto.ts  index.ts  ml-dsa.ts  ml-kem.ts  slh-dsa.ts  types.ts
tests/unit/: auto.test.ts  index.test.ts  ml-dsa-compliance.test.ts  ml-dsa-uninit.test.ts  ml-dsa.test.ts  ml-kem-compliance.test.ts  ml-kem-concurrent-init.test.ts  ml-kem-init-fail.test.ts  ml-kem-property.test.ts  ml-kem-uninit.test.ts  ml-kem.test.ts  package-artifacts.test.ts  safeguard.test.ts  scripts.test.ts  slh-dsa-compliance.test.ts  slh-dsa-uninit.test.ts  slh-dsa.test.ts  types.test.ts
(+3 files in other folders)
