[workspace]
resolver = "2"
members = ["rust"]

[workspace.package]
version = "0.7.0"
edition = "2024"
license = "MIT"
authors = ["Feng Zheng <fzheng@users.noreply.github.com>"]
repository = "https://github.com/fzheng/fips-crypto"

# Release profile for optimized WASM builds
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
