[package]
name = "fips-crypto-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Post-quantum cryptography library implementing FIPS 203, 204, 205"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
sha3 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
